--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,27 @@
 body {
-    background-color: gray;
+    background-color: paleturquoise;
+}
+
+.container {
+    background-color: bisque;
+}
+
+footer {
+    background-color: blueviolet;
+    color: bisque
+    text-align: center;
+}
+
+.flex-container {
+    display: flex;
+    display: -webkit-flex;
+    width: 100%;
+}
+
+.flex-section {
+
+}
+
+.flex-item {
+    margin: 1em;
 }
